health-checks/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-tea-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: health-tea
